<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
			  android:layout_marginTop="10dp"
			  android:background="@drawable/background"
        >
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Welcome"
			android:textSize="30dp"
			android:textAlignment="center"

          />


    <Button android:id="@+id/btnPlayGame"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnPlanGame"
            android:textAlignment="center"
		    android:layout_marginTop="120dp"
			android:layout_marginLeft="30dp"

            />

	<Button android:id="@+id/btnGameStats"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:text="@string/btnGameStats"
			android:textAlignment="center"

			android:layout_marginLeft="30dp"
			/>

    <Button android:id="@+id/btnSettings"
			android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/settingDisplay"
            android:textAlignment="center"

			android:layout_marginLeft="30dp"
            />

    <Button  android:layout_width="300dp"
			 android:layout_marginLeft="30dp"
			 android:layout_height="wrap_content"
			 android:id="@+id/btnHelp"
			 android:text="@string/btnhelp"

			 android:textAlignment="center"/>

    <Button android:id="@+id/btnExit"
			android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnExit"
            android:textAlignment="center"
			android:layout_marginLeft="30dp"
     />


</LinearLayout>

