<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
	          android:background="@drawable/background"
		>
	<Button android:id="@+id/btnHighScore"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:text="@string/btnShowHighScores"
			android:textAlignment="center"
			android:layout_marginTop="150dp"
			android:layout_marginLeft="30dp"
			/>
	<Button android:id="@+id/btnTotalNumbersOfGame"
					  android:layout_width="300dp"
					  android:layout_height="wrap_content"
					  android:text="@string/btnTotalGamesPlayed"
					  android:textAlignment="center"
					  android:layout_marginLeft="30dp"
		/>
	<Button android:id="@+id/btnTotalNumbersOfTied"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:text="@string/totalGamesTied"
			android:textAlignment="center"
			android:layout_marginLeft="30dp"
			/>

	<LinearLayout android:layout_width="fill_parent"
				  android:layout_height="wrap_content"
				  android:orientation="vertical">
	</LinearLayout>


</LinearLayout>