<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
			  android:layout_marginTop="10dp"
			  android:background="@drawable/background"
		>
    <TextView android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="Settings"
            />
    <CheckBox
            android:id="@+id/chkMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkMusic"
            android:checked="true"
            android:height="120dp"
            android:maxWidth="120dp"
            android:textAlignment="center"
			android:layout_marginLeft="30dp"
			android:onClick="onCheckboxClicked"
            />

    <CheckBox
            android:id="@+id/chksound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chksound"
            android:checked="true"
            android:height="120dp"
            android:maxWidth="120dp"
            android:textAlignment="center"
			android:layout_marginLeft="30dp"
			android:onClick="onCheckboxClicked"
            />

	<CheckBox
			android:id="@+id/chkvibrate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/chkvibrate"
			android:checked="true"
			android:height="120dp"
			android:maxWidth="120dp"
			android:textAlignment="center"
			android:layout_marginLeft="30dp"
			android:onClick="onCheckboxClicked"
			/>

    <Button android:id="@+id/btnBack"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:text="@string/btnBack"
			android:textAlignment="center"
			android:layout_marginTop="150dp"
			android:layout_marginLeft="30dp"
            />

</LinearLayout>

